k8s/config/load-balancer.yml
apiVersion: v1
kind: Service
metadata:
  name: rails-api-load-balancer
spec:
  type: LoadBalancer
  selector:
    app: rails-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      name: http
