k8s/config/nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: hello-world.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rails-api-load-balancer
                port:
                  number: 80


# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: nginx-ingress
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /$2
# spec:
#   rules:
#   - host: hello-world.info
#     http:
#       paths:
#       - path: /api(/|$)(.*)
#         backend:
#           serviceName: rails-api
#           servicePort: 3000
